--- a/src/main/java/View/ManterFuncionarioView.form
+++ b/src/main/java/View/ManterFuncionarioView.form
@@ -3,6 +3,7 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -35,16 +36,16 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="cbxCargo" max="32767" attributes="0"/>
+                          <Component id="FuncCargo" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Group type="102" attributes="0">
-                                      <Component id="txtFalta" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="FuncFaltas" min="-2" pref="150" max="-2" attributes="0"/>
                                       <EmptySpace pref="22" max="32767" attributes="0"/>
-                                      <Component id="chcFuncionarioDMes" min="-2" max="-2" attributes="0"/>
+                                      <Component id="FuncFuncionarioDoMes" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="txtNome" max="32767" attributes="0"/>
-                                  <Component id="cbxBonus" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="FuncNome" max="32767" attributes="0"/>
+                                  <Component id="FuncBonus" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -58,7 +59,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace pref="8" max="32767" attributes="0"/>
-                                      <Component id="txtAdmissao" min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="FuncDataAdmissao" min="-2" pref="150" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -75,9 +76,15 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnSalvar" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="txtIdade" max="32767" attributes="0"/>
-                          <Component id="txtSalario" alignment="0" max="32767" attributes="0"/>
+                          <Component id="FuncIdade" max="32767" attributes="0"/>
+                          <Component id="FuncSalario" alignment="0" max="32767" attributes="0"/>
                       </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="FuncFamiliares" min="-2" pref="78" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -90,35 +97,40 @@
               <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="label1" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbxCargo" min="-2" max="-2" attributes="0"/>
+                  <Component id="FuncCargo" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="label2" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtNome" min="-2" max="-2" attributes="0"/>
+                  <Component id="FuncNome" min="-2" max="-2" attributes="0"/>
                   <Component id="label5" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtIdade" min="-2" max="-2" attributes="0"/>
+                  <Component id="FuncIdade" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="label3" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cbxBonus" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="FuncBonus" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="txtSalario" min="-2" max="-2" attributes="0"/>
+                  <Component id="FuncSalario" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="label4" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtFalta" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="chcFuncionarioDMes" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="FuncFaltas" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="FuncFuncionarioDoMes" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtAdmissao" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="FuncDataAdmissao" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="56" max="32767" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="FuncFamiliares" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="22" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnSalvar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnEditar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -155,6 +167,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salvar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnEditar">
       <Properties>
@@ -170,12 +185,15 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Fechar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFecharActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtNome">
+    <Component class="javax.swing.JTextField" name="FuncNome">
     </Component>
-    <Component class="javax.swing.JTextField" name="txtFalta">
+    <Component class="javax.swing.JTextField" name="FuncFaltas">
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbxCargo">
+    <Component class="javax.swing.JComboBox" name="FuncCargo">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
@@ -184,12 +202,17 @@
             <StringItem index="2" value="RH"/>
           </StringArray>
         </Property>
+        <Property name="selectedIndex" type="int" value="-1"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FuncCargoActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JComboBox" name="cbxBonus">
+    <Component class="javax.swing.JComboBox" name="FuncBonus">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
@@ -202,7 +225,7 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="chcFuncionarioDMes">
+    <Component class="javax.swing.JCheckBox" name="FuncFuncionarioDoMes">
       <Properties>
         <Property name="text" type="java.lang.String" value="Funcion&#xe1;rio do M&#xea;s"/>
       </Properties>
@@ -222,11 +245,11 @@
         <Property name="text" type="java.lang.String" value="Admiss&#xe3;o"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtIdade">
+    <Component class="javax.swing.JTextField" name="FuncIdade">
     </Component>
-    <Component class="javax.swing.JTextField" name="txtSalario">
+    <Component class="javax.swing.JTextField" name="FuncSalario">
     </Component>
-    <Component class="javax.swing.JFormattedTextField" name="txtAdmissao">
+    <Component class="javax.swing.JFormattedTextField" name="FuncDataAdmissao">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
           <Format format="####/##/##" subtype="-1" type="5"/>
@@ -234,8 +257,15 @@
         <Property name="text" type="java.lang.String" value="0000/00/00"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtAdmissaoActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="FuncDataAdmissaoActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Numero de Familiares"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="FuncFamiliares">
     </Component>
   </SubComponents>
 </Form>
